--- a/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/build.gradle
+++ b/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/build.gradle
@@ -6,11 +6,15 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:7.2.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+ext {
+    defaultMinSdkVersion = 28
 }
 
 allprojects {
