functioning layout for git hub search

--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/build.gradle
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/build.gradle
@@ -19,6 +19,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+
+    androidTestImplementation 'androidx.annotation:annotation:1.0.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
 
     // TODO (32) Remove the ConstraintLayout dependency as we aren't using it for these simple projects (Done)
     //implementation 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
